// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`40-column baseline: painted buffers centered bordered modal at the XXS dialog width 1`] = `
[
  "00 chr |                                        |",
  "00 att 3fe00*40",
  "01 chr |                                        |",
  "01 att 3fe00*40",
  "02 chr |                                        |",
  "02 att 3fe00*40",
  "03 chr |                                        |",
  "03 att 3fe00*40",
  "04 chr |                                        |",
  "04 att 3fe00*40",
  "05 chr |                                        |",
  "05 att 3fe00*40",
  "06 chr |                                        |",
  "06 att 3fe00*40",
  "07 chr | .------------------------------------. |",
  "07 att 3fe00*1 3ffff*38 3fe00*1",
  "08 chr | |                                    | |",
  "08 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "09 chr | |                                    | |",
  "09 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "10 chr | |                                    | |",
  "10 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "11 chr | | Are you sure you want to continue? | |",
  "11 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "12 chr | |                                    | |",
  "12 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "13 chr | |                                    | |",
  "13 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "14 chr | |                                    | |",
  "14 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "15 chr | |                                    | |",
  "15 att 3fe00*1 3ffff*1 3fe00*36 3ffff*1 3fe00*1",
  "16 chr | \`------------------------------------' |",
  "16 att 3fe00*1 3ffff*38 3fe00*1",
  "17 chr |                                        |",
  "17 att 3fe00*40",
  "18 chr |                                        |",
  "18 att 3fe00*40",
  "19 chr |                                        |",
  "19 att 3fe00*40",
  "20 chr |                                        |",
  "20 att 3fe00*40",
  "21 chr |                                        |",
  "21 att 3fe00*40",
  "22 chr |                                        |",
  "22 att 3fe00*40",
  "23 chr |                                        |",
  "23 att 3fe00*40",
  "24 chr |                                        |",
  "24 att 3fe00*40",
]
`;

exports[`40-column baseline: painted buffers full-width list with selection 1`] = `
[
  "00 chr |  Item number 1 with some descriptive   |",
  "00 att 3fe00*40",
  "01 chr |  text                                  |",
  "01 att 3fe00*40",
  "02 chr |  Item number 2 with some descriptive   |",
  "02 att 3fe00*40",
  "03 chr |  text                                  |",
  "03 att 3fe00*40",
  "04 chr |  Item number 3 with some descriptive   |",
  "04 att 3fe00*40",
  "05 chr |  text                                  |",
  "05 att 3fe00*40",
  "06 chr |> Item number 4 with some descriptive   |",
  "06 att 3fe00*40",
  "07 chr |  text                                  |",
  "07 att 3fe00*40",
  "08 chr |  Item number 5 with some descriptive   |",
  "08 att 3fe00*40",
  "09 chr |  text                                  |",
  "09 att 3fe00*40",
  "10 chr |  Item number 6 with some descriptive   |",
  "10 att 3fe00*40",
  "11 chr |  text                                  |",
  "11 att 3fe00*40",
  "12 chr |  Item number 7 with some descriptive   |",
  "12 att 3fe00*40",
  "13 chr |  text                                  |",
  "13 att 3fe00*40",
  "14 chr |  Item number 8 with some descriptive   |",
  "14 att 3fe00*40",
  "15 chr |  text                                  |",
  "15 att 3fe00*40",
  "16 chr |  Item number 9 with some descriptive   |",
  "16 att 3fe00*40",
  "17 chr |  text                                  |",
  "17 att 3fe00*40",
  "18 chr |  Item number 10 with some descriptive  |",
  "18 att 3fe00*40",
  "19 chr |  text                                  |",
  "19 att 3fe00*40",
  "20 chr |                                        |",
  "20 att 3fe00*40",
  "21 chr |                                        |",
  "21 att 3fe00*40",
  "22 chr |                                        |",
  "22 att 3fe00*40",
  "23 chr |                                        |",
  "23 att 3fe00*40",
  "24 chr |                                        |",
  "24 att 3fe00*40",
]
`;

exports[`40-column baseline: painted buffers masthead + footer + list/detail panel layout (doorman-shaped, via createScreen) 1`] = `
[
  "00 chr |                                        |",
  "00 att e00*40",
  "01 chr |> Alpha Door                            |",
  "01 att 3fe00*40",
  "02 chr |  Beta Door                             |",
  "02 att 3fe00*40",
  "03 chr |  Gamma Door                            |",
  "03 att 3fe00*40",
  "04 chr |  Delta Door                            |",
  "04 att 3fe00*40",
  "05 chr |                                        |",
  "05 att 3fe00*40",
  "06 chr |                                        |",
  "06 att 3fe00*40",
  "07 chr |                                        |",
  "07 att 3fe00*40",
  "08 chr |                                        |",
  "08 att 3fe00*40",
  "09 chr |                                        |",
  "09 att 3fe00*40",
  "10 chr |                                        |",
  "10 att 3fe00*40",
  "11 chr |                                        |",
  "11 att 3fe00*40",
  "12 chr |Detail panel, forty columns wide.       |",
  "12 att 3fe00*40",
  "13 chr |                                        |",
  "13 att 3fe00*40",
  "14 chr |                                        |",
  "14 att 3fe00*40",
  "15 chr |                                        |",
  "15 att 3fe00*40",
  "16 chr |                                        |",
  "16 att 3fe00*40",
  "17 chr |                                        |",
  "17 att 3fe00*40",
  "18 chr |                                        |",
  "18 att 3fe00*40",
  "19 chr |                                        |",
  "19 att 3fe00*40",
  "20 chr |                                        |",
  "20 att 3fe00*40",
  "21 chr |                                        |",
  "21 att 3fe00*40",
  "22 chr |                                        |",
  "22 att 3fe00*40",
  "23 chr |                                        |",
  "23 att e00*40",
  "24 chr |                                        |",
  "24 att e00*40",
]
`;
